--- a/index.html
+++ b/index.html
@@ -199,7 +199,12 @@
                     <p>A Social Proof Section that showcases testimonials, reviews, and endorsements.</p>
                 </div>
 
-                <div class="project-items"></div>
+                <div class="project-items">
+                    <img src="images/pickup.png" alt="Pickup App">
+                    <h2>Pickup App</h2>
+                    <p>A mobile app that allows users to schedule and manage pickup services efficiently.</p>
+                </div>
+
                 <div class="project-items"></div>
                 <div class="project-items"></div>
             </div>
