--- a/index.html
+++ b/index.html
@@ -205,7 +205,12 @@
                     <p>A mobile app that allows users to schedule and manage pickup services efficiently.</p>
                 </div>
 
-                <div class="project-items"></div>
+                <div class="project-items">
+                    <img src="images/ant.png" alt="Ant Project">
+                    <h2>Ant Game</h2>
+                    <p>A fun Scratch game where you move an ant to collect food and avoid obstacles.</p>
+                </div>
+
                 <div class="project-items"></div>
             </div>
         </section>
