git commit -m "Updated project titles from h2 to h3 for consistency and added Smart Trash Can project; included Free Demo & Trial Sessions section with description and button."

--- a/index.html
+++ b/index.html
@@ -165,54 +165,64 @@
             <div class="project-card">
                 <div class="project-items">
                     <img src="images/project car.jpg" alt="Robot Car">
-                    <h2>Robotic Car</h2>
+                    <h3>Robotic Car</h3>
                     <p>A line-following robotic car designed and built to navigate autonomously along a defined path using infrared sensors and basic programming.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/product preview.png" alt="Product Preview">
-                    <h2>Product Preview Card</h2>
+                    <h3>Product Preview Card</h3>
                     <p>A Product Preview Card is a standardized UI component used in listings and e-commerce to display a single item.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/Dodge.png" alt="Dodge Game">
-                    <h2>Dodge Game</h2>
+                    <h3>Dodge Game</h3>
                     <p>An exciting Scratch game where players must dodge obstacles and survive as long as possible.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/calculator.png" alt="Calculator App">
-                    <h2>Calculator App</h2>
+                    <h3>Calculator App</h3>
                     <p>A simple and user-friendly calculator app built using MIT App Inventor.</p>
                 </div>
                 
                 <div class="project-items">
                     <img src="images/Tinker Circuit.png" alt="TinkerCad Circuit">
-                    <h2>TinkerCad Circuit</h2>
+                    <h3>TinkerCad Circuit</h3>
                     <p>A virtual Motion Detector electronics circuit designed and simulated using TinkerCad.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/social proof.png" alt="social proof">
-                    <h2>Social Proof Section</h2>
+                    <h3>Social Proof Section</h3>
                     <p>A Social Proof Section that showcases testimonials, reviews, and endorsements.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/pickup.png" alt="Pickup App">
-                    <h2>Pickup App</h2>
+                    <h3>Pickup App</h3>
                     <p>A mobile app that allows users to schedule and manage pickup services efficiently.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/ant.png" alt="Ant Project">
-                    <h2>Ant Game</h2>
+                    <h3>Ant Game</h3>
                     <p>A fun Scratch game where you move an ant to collect food and avoid obstacles.</p>
                 </div>
 
-                <div class="project-items"></div>
+                <div class="project-items">
+                    <img src="images/Trash can.jpg" alt="Trash Can Project">
+                    <h3>Smart Trash Can</h3>
+                    <p>A smart bin that opens when you get close. It makes use of ultrasonic sensors.</p>
+                </div>
             </div>
+        </section>
+
+        <section class="free-class">
+            <h2>Free Demo & Trial Sessions</h2>
+            <p>Experience our teaching style and curriculum firsthand with a free demo class or trial session. Perfect for parents and students to get a feel for what we offer before enrolling.</p>
+            <button>Book a Free Session</button>
         </section>
 
         <section class="testimonials-section"></section>
