git commit -a -m "Enhance project descriptions and add free session details"

--- a/index.html
+++ b/index.html
@@ -166,19 +166,19 @@
                 <div class="project-items">
                     <img src="images/project car.jpg" alt="Robot Car">
                     <h3>Robotic Car</h3>
-                    <p>A line-following robotic car designed and built to navigate autonomously along a defined path using infrared sensors and basic programming.</p>
+                    <p>A robotic car that follows a line automatically using infrared sensors.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/product preview.png" alt="Product Preview">
                     <h3>Product Preview Card</h3>
-                    <p>A Product Preview Card is a standardized UI component used in listings and e-commerce to display a single item.</p>
+                    <p>A small UI card that shows a single product in a list or shop.</p>
                 </div>
 
                 <div class="project-items">
                     <img src="images/Dodge.png" alt="Dodge Game">
                     <h3>Dodge Game</h3>
-                    <p>An exciting Scratch game where players must dodge obstacles and survive as long as possible.</p>
+                    <p>A Scratch game where players dodge obstacles and try to survive.</p>
                 </div>
 
                 <div class="project-items">
@@ -221,7 +221,7 @@
 
         <section class="free-class">
             <h2>Free Demo & Trial Sessions</h2>
-            <p>Experience our teaching style and curriculum firsthand with a free demo class or trial session. Perfect for parents and students to get a feel for what we offer before enrolling.</p>
+            <p>Experience our teaching style through a free trial or school demo. Join our online trial class from home or request an onsite demo session for your school. A quick way to see how fun and engaging our lessons are before enrolling.</p>
             <button>Book a Free Session</button>
         </section>
 
