--- a/index.html
+++ b/index.html
@@ -219,10 +219,13 @@
             </div>
         </section>
 
+        <!-- FREE DEMO & TRIAL SESSIONS -->
         <section class="free-class">
-            <h2>Free Demo & Trial Sessions</h2>
-            <p>Experience our teaching style through a free trial or school demo. Join our online trial class from home or request an onsite demo session for your school. A quick way to see how fun and engaging our lessons are before enrolling.</p>
-            <button>Book a Free Session</button>
+            <div class="free-detail">
+                <h2>Free Demo & Trial Sessions</h2>
+                <p>Experience our teaching style through a free trial or school demo. Join our online trial class from home or request an onsite demo session for your school. A quick way to see how fun and engaging our lessons are before enrolling.</p>
+                <button>Book a Free Session</button>
+            </div>
         </section>
 
         <section class="testimonials-section"></section>
