git commit -m "Added Free Demo & Trial Sessions section; Improved button interactivity; Fixed typo in 'Enroll Now' button text"

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                         <li><a href="#">FAQs</a></li>
                         <li><a href="#">Contact</a></li>
 
-                        <li><a href="#" class="cta-btn">Enrol Now</a></li>
+                        <li><a href="#" class="cta-btn">Enroll Now</a></li>
                     </ul>
 
                     <!-- Mobile Hamburger Menu -->
