git commit -m "Update index.html with new content"

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                         </li>
 
                         <li><a href="#projects">Projects</a></li>
-                        <li><a href="#">Testimonials</a></li>
+                        <li><a href="#testimonials">Testimonials</a></li>
                         <li><a href="#">Blog</a></li>
                         <li><a href="#">FAQs</a></li>
                         <li><a href="#">Contact</a></li>
@@ -228,7 +228,7 @@
             </div>
         </section>
 
-        <section class="testimonials-section"></section>
+        <section id="testimonials" class="testimonials-section"></section>
         <section class="faqs-section"></section>
         <section class="blog-section"></section>
         <section class="contact-section"></section>
