--- a/index.html
+++ b/index.html
@@ -229,7 +229,18 @@
         </section>
 
         <section id="testimonials" class="testimonials-section"></section>
-        <section class="faqs-section"></section>
+
+        <section class="faqs-section">
+            <div class="faq-item">
+                <button class="faq-btn">
+                    What age groups do you teach?
+                </button>
+
+                <div class="faq-content">
+                    <p>We teach kids and teens from 5 - 17 years old how to come into the world of tech and become problem solvers</p>
+                </div>
+            </div>
+        </section>
         <section class="blog-section"></section>
         <section class="contact-section"></section>
         <section class="footer-section"></section>
