git commit -m "Corrected FAQ question and improved answer clarity"

--- a/index.html
+++ b/index.html
@@ -237,7 +237,7 @@
                 </button>
 
                 <div class="faq-content">
-                    <p>We teach kids and teens from 5 - 17 years old how to come into the world of tech and become problem solvers</p>
+                    <p>We offer coding programmes for children and teens aged 5 to 17, tailored to different skill levels.</p>
                 </div>
             </div>
         </section>
