--- a/index.html
+++ b/index.html
@@ -240,6 +240,29 @@
                     <p>We offer coding programmes for children and teens aged 5 to 17, tailored to different skill levels.</p>
                 </div>
             </div>
+
+            <div class="faq-item">
+                <button>Do students need prior coding experience?</button>
+
+                <div class="faq-content">
+                    <p>No prior coding experience is necessary. Our courses are designed to accommodate beginners and gradually build their skills.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <button>Are programs online or in-person?</button>
+
+                <div class="faq-content">
+                    <p>We offer both online and in-person classes to provide flexibility for students and parents.</p>
+                </div>
+            </div>
+
+            <div>
+                <button>What languages do you teach?</button>
+
+                <div class="faq-content">
+                    <p>We teach a variety of programming languages including Scratch, Python, JavaScript, and more, depending on the course.</p>
+            </div>
         </section>
         <section class="blog-section"></section>
         <section class="contact-section"></section>
