--- a/index.html
+++ b/index.html
@@ -230,6 +230,7 @@
 
         <section id="testimonials" class="testimonials-section"></section>
 
+        <!-- FAQs SECTION -->
         <section class="faqs-section">
             <div class="faq-item">
                 <button class="faq-btn">
@@ -242,7 +243,7 @@
             </div>
 
             <div class="faq-item">
-                <button>Do students need prior coding experience?</button>
+                <button class="faq-btn">Do students need prior coding experience?</button>
 
                 <div class="faq-content">
                     <p>No prior coding experience is necessary. Our courses are designed to accommodate beginners and gradually build their skills.</p>
@@ -250,18 +251,27 @@
             </div>
 
             <div class="faq-item">
-                <button>Are programs online or in-person?</button>
+                <button class="faq-btn">Are programs online or in-person?</button>
 
                 <div class="faq-content">
                     <p>We offer both online and in-person classes to provide flexibility for students and parents.</p>
                 </div>
             </div>
 
-            <div>
-                <button>What languages do you teach?</button>
+            <div class="faq-item">
+                <button class="faq-btn">What languages do you teach?</button>
 
                 <div class="faq-content">
                     <p>We teach a variety of programming languages including Scratch, Python, JavaScript, and more, depending on the course.</p>
+                </div>
+            </div>
+
+            <div class="faq-item">
+                <button class="faq-btn">How can I enroll my child?</button>
+
+                <div class="faq-content">
+                    <p>You can enroll your child through our website by selecting the desired program and completing the registration form.</p>
+                </div>
             </div>
         </section>
         <section class="blog-section"></section>
