git commit -m "Update index and style"

--- a/index.html
+++ b/index.html
@@ -232,6 +232,9 @@
 
         <!-- FAQs SECTION -->
         <section class="faqs-section">
+
+            <h2>Frequently Asked Questions</h2>
+            
             <div class="faq-item">
                 <button class="faq-btn">
                     What age groups do you teach?
