git commit -m "Update index.html with new content"

--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
                         <li><a href="#projects">Projects</a></li>
                         <li><a href="#testimonials">Testimonials</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Contact</a></li>
+                        <li><a href="#blog">Blog</a></li>
+                        <li><a href="#faqs">FAQs</a></li>
+                        <li><a href="#contact">Contact</a></li>
 
                         <li><a href="#" class="cta-btn">Enroll Now</a></li>
                     </ul>
@@ -228,13 +228,17 @@
             </div>
         </section>
 
+        <!-- TESTIMONIALS SECTION -->
         <section id="testimonials" class="testimonials-section"></section>
 
+        <!-- BLOG SECTION -->
+        <section id="blog" class="blog-section"></section>
+
         <!-- FAQs SECTION -->
-        <section class="faqs-section">
+        <section id="faqs" class="faqs-section">
 
             <h2>Frequently Asked Questions</h2>
-            
+
             <div class="faq-item">
                 <button class="faq-btn">
                     What age groups do you teach?
@@ -277,9 +281,12 @@
                 </div>
             </div>
         </section>
-        <section class="blog-section"></section>
-        <section class="contact-section"></section>
-        <section class="footer-section"></section>
+
+        <!-- CONTACT SECTION -->
+        <section id="contact" class="contact-section"></section>
+        
+        <!-- FOOTER SECTION -->
+        <section id="footer" class="footer-section"></section>
     </main>
 
     <script src="index.js"></script>
