git commit -m "Update blog section content and enhance styles for better user experience"

--- a/index.html
+++ b/index.html
@@ -234,25 +234,26 @@
         <!-- BLOG SECTION -->
         <section id="blog" class="blog-section">
             <h2>Latest Blog Posts</h2>
+            <p>Stay updated with the latest trends, tips, and insights in coding education for kids and teens.</p>
 
             <div class="grid-blog">
                 <div class="blog-item">
-                    <img src="images/blog1.jpg" alt="blog1">
+                    <img src="images/blog1.png" alt="blog1">
                     <h3>5 Benefits of Learning to Code at a Young Age</h3>
                     <p>Discover how coding can enhance problem-solving skills, creativity, and future career opportunities for kids and teens.</p>
                     <button>Read More</button>
                 </div>
 
                 <div class="blog-item">
-                    <img src="images/blog2.jpg" alt="blog2">
+                    <img src="images/blog2.png" alt="blog2">
                     <h3>Top 10 Coding Languages for Beginners</h3>
                     <p>Explore the best programming languages for beginners and why they are ideal for young learners starting their coding journey.</p>
                     <button>Read More</button>
                 </div>
 
                 <div class="blog-item">
-                    <img src="images/blog3.jpg" alt="blog3">
-                    <h3>How to Choose the Right Coding Program for Your Child</h3>
+                    <img src="images/blog3.png" alt="blog3">
+                    <h3>Choosing the Best Coding Course</h3>
                     <p>Learn key factors to consider when selecting a coding program that fits your child's interests and learning style.</p>
                     <button>Read More</button>
                 </div>
