git commit -m "Centered project cards and blog items; Added FAQ section styling"

--- a/index.html
+++ b/index.html
@@ -261,51 +261,53 @@
         </section>
 
         <!-- FAQs SECTION -->
-        <section id="faqs" class="faqs-section">
+        <section id="faqs" class="faqs-main-section">
+                <section class="faqs-section">
 
-            <h2>Frequently Asked Questions</h2>
+                <h2>Frequently Asked Questions</h2>
 
-            <div class="faq-item">
-                <button class="faq-btn">
-                    What age groups do you teach?
-                </button>
+                <div class="faq-item">
+                    <button class="faq-btn">
+                        What age groups do you teach?
+                    </button>
 
-                <div class="faq-content">
-                    <p>We offer coding programmes for children and teens aged 5 to 17, tailored to different skill levels.</p>
+                    <div class="faq-content">
+                        <p>We offer coding programmes for children and teens aged 5 to 17, tailored to different skill levels.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="faq-item">
-                <button class="faq-btn">Do students need prior coding experience?</button>
+                <div class="faq-item">
+                    <button class="faq-btn">Do students need prior coding experience?</button>
 
-                <div class="faq-content">
-                    <p>No prior coding experience is necessary. Our courses are designed to accommodate beginners and gradually build their skills.</p>
+                    <div class="faq-content">
+                        <p>No prior coding experience is necessary. Our courses are designed to accommodate beginners and gradually build their skills.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="faq-item">
-                <button class="faq-btn">Are programs online or in-person?</button>
+                <div class="faq-item">
+                    <button class="faq-btn">Are programs online or in-person?</button>
 
-                <div class="faq-content">
-                    <p>We offer both online and in-person classes to provide flexibility for students and parents.</p>
+                    <div class="faq-content">
+                        <p>We offer both online and in-person classes to provide flexibility for students and parents.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="faq-item">
-                <button class="faq-btn">What languages do you teach?</button>
+                <div class="faq-item">
+                    <button class="faq-btn">What languages do you teach?</button>
 
-                <div class="faq-content">
-                    <p>We teach a variety of programming languages including Scratch, Python, JavaScript, and more, depending on the course.</p>
+                    <div class="faq-content">
+                        <p>We teach a variety of programming languages including Scratch, Python, JavaScript, and more, depending on the course.</p>
+                    </div>
                 </div>
-            </div>
 
-            <div class="faq-item">
-                <button class="faq-btn">How can I enroll my child?</button>
+                <div class="faq-item">
+                    <button class="faq-btn">How can I enroll my child?</button>
 
-                <div class="faq-content">
-                    <p>You can enroll your child through our website by selecting the desired program and completing the registration form.</p>
+                    <div class="faq-content">
+                        <p>You can enroll your child through our website by selecting the desired program and completing the registration form.</p>
+                    </div>
                 </div>
-            </div>
+            </section>
         </section>
 
         <!-- CONTACT SECTION -->
